// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarInput should match snapshot (bool) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-change-input"
    maxLength="1000"
    onChange={[Function]}
    placeholder="Meta"
    value=""
  />
  <button
    className="c-sidebar__submit qa-submit-input"
    onClick={[Function]}
  >
    Reset
  </button>
</div>
`;

exports[`SidebarInput should match snapshot (bool, text) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-change-input"
    maxLength="1000"
    onChange={[Function]}
    placeholder="Meta"
    value="Text"
  />
  <button
    className="c-sidebar__submit qa-submit-input"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;

exports[`SidebarInput should match snapshot (default) 1`] = `
<div
  className="c-sidebar__input-box"
>
  <input
    className="c-sidebar__input qa-change-input"
    maxLength="1000"
    onChange={[Function]}
    placeholder="Meta"
    value=""
  />
  <button
    className="c-sidebar__submit qa-submit-input"
    onClick={[Function]}
  >
    Set
  </button>
</div>
`;
